# api-ecommerce

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
api_ecommerce/: config.py  models.py  run.py
api_ecommerce/app/: __init__.py
api_ecommerce/app/auth/: checks.py  routes.py
api_ecommerce/app/commands/: routes.py
api_ecommerce/app/products/: routes.py
api_ecommerce/script/: build_database.py
api_ecommerce/scripts/: build_database.py
data/db_data/: ecommerce.db  ecommerce_test.db
data/raw_data/: products.csv
notebooks/: query.ipynb
tests/: conftest.py  test_auth.py  test_command.py  test_product.py
tests/data/db_data/: ecommerce.db
