[project]
name = "api_ecommerce"
version = "0.1.0"
description = "API REST for e-commerce project from BlentAI platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "jwt>=1.3.1",
    "pandas>=2.2.3",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.40",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
]

[tool.pylint.'MAIN']
max-line-length = 100
disable = ["invalid-name", "broad-exception-caught"]

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project.scripts]
init-db = "api_ecommerce.scripts.build_database:init_db"
